--- a/server/demo.conf
+++ b/server/demo.conf
@@ -11,6 +11,7 @@
 #addrlist = 255.255.255.255:5049
 # for local testing w/ firewall
 #addrlist = 127.255.255.255:5049
+addrlist = 127.255.255.255:5049
 
 # Processing chain
 # sequence of plugin names seperated by ','
@@ -26,8 +27,9 @@
 # eg. print and store in database.  Database config from section "[lite]"
 # Show config from "[show]" although show has no options at present.
 ##procs = show, db:lite
+procs = show, db:lite
 
-procs = show ; just print
+#procs = show ; just print
 
 # Time interval for sending recceiver advertisments
 #announceInterval = 15.0
